--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "intertorg",
   "version": "0.1.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
