--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/nodemailer": "^6.4.17",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
+    "nodemailer": "^7.0.3",
     "react": "^18",
     "react-dom": "^18"
   },
